--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,8 +11,8 @@
     </div>
   </div>
   <div class="row">
-    <div class="col text-center user-btn">
-      <%= link_to "LOG IN", new_user_session_path, class: "btn fs-4 p-3 rounded-0 w-100" %>
+    <div class="col text-center">
+      <%= link_to "LOG IN", new_user_session_path, class: "btn btn-primary fs-4 p-3 rounded-0 w-100" %>
       <%= link_to "SIGN UP", new_user_registration_path, class: "btn fs-4 p-3 rounded-0 w-100" %>
     </div>
   </div>
