Add Acknowledgment in Readme File Update link: category_payments_path

--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,2 +1,2 @@
-<%= render "shared/header", title: 'NEW PAYMENT', icon: 'arrow-back', link: root_path, logout: true %>
+<%= render "shared/header", title: 'NEW PAYMENT', icon: 'arrow-back', link: category_payments_path, logout: true %>
 <%= render "form", payment: @payment %>
